# dualsense-sfx-haptics

./: .gitignore  NATIVE_BUILD.md  PROJECT_CHANGES.md  QUICKSTART-v2.md  QUICKSTART.md  README.md  haptics.example.json  package-lock.json  package.json  test-sfx-detection.js
.github/: copilot-instructions.md
config/games/: sekiro.json
public/: index.html
src/controllers/: AudioAnalyzer.js  DirectSoundHook.js  DualSenseController.js  HapticMapper.js  SFXDetector.js  SFXtoHapticController.js
src/gui/: MainForm.cs
src/main/: main.js  preload.js
src/native/: CMakeLists.txt  directsound_hook.cpp
src/native/fmod_probe/: CMakeLists.txt  README.md  dllmain.cpp  fmodex64.def  haptic_out.cpp  haptic_out.h
src/native/haptic_test/: ds_speaker_beep.cpp  ds_speaker_wav.cpp  getdev.cpp  playclip.cpp  wavana.cpp
src/renderer/: App.css  App.jsx
src/renderer/components/: ControllerList.css  ControllerList.jsx  VibrationControl.css  VibrationControl.jsx
